[tool.poetry]
name = "sword-sim"
version = "0.1.0"
description = ""
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"
packages = [{include = "sword_sim"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
gymnasium = "^1.0.0"
jupyterlab = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
