[tool.poetry]
name = "sword-sim"
version = "0.1.0"
description = ""
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"
packages = [{include = "sword_sim"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
gymnasium = "^1.0.0"
manim = "^0.18.1"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
